Add CRUD backend skeleton
