# backend/src/main/java/cz/orchitech/todobackend/model/TodoEntry.java
@@ -1,0 +1,41 @@
+package cz.orchitech.todobackend.model;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.validation.constraints.NotBlank;
+
+@Entity
+public class TodoEntry implements DomainEntity<Long> {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    @NotBlank
+    private String name;
+
+    public TodoEntry(Long id, String name) {
+        this.id = id;
+        this.name = name;
+    }
+
+    public TodoEntry() {
+    }
+
+    public void setId(Long id) {
+        this.id = id;
+    }
+
+    public Long getId() {
+        return id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+}
