# backend/src/main/resources/static/openapi.yaml
@@ -4,7 +4,7 @@ info:
   description: REST API for TODO entries management application
   version: 1.0.0
 servers:
-  - url: 'https://localhost:8080'
+  - url: 'http://localhost:8080'
 components:
   schemas:
     TodoEntry:
@@ -14,6 +14,16 @@ components:
           type: integer
         name:
           type: string
+      required:
+        - id
+        - name
+    NewTodoEntry:
+      type: object
+      properties:
+        name:
+          type: string
+      required:
+        - name
 paths:
   /entries:
     get:
@@ -34,7 +44,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TodoEntry'
+              $ref: '#/components/schemas/NewTodoEntry'
       responses:
         201:
           description: TODO entry added successfully
@@ -44,9 +54,9 @@ paths:
                 $ref: '#/components/schemas/TodoEntry'
   /entries/{id}:
     parameters:
-      - name : id
-        in : path
-        required : true
+      - name: id
+        in: path
+        required: true
         description: TODO entry ID
         schema:
           type: integer
@@ -69,7 +79,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/TodoEntry'
+              $ref: '#/components/schemas/NewTodoEntry'
       responses:
         200:
           description: TODO entry updates successfully
